   * Fixed bug #15653: Made untranslateable strings translateable.
   * Fixed bug #15843: Made untranslateable strings translateable.
 * Multiplayer:
   * Fixed bug #15865: missing WML Child error.
 * User interface:
   * Fixed bug #15716: Lobby crash when refreshing with filtered out games
   * Fixed bug #15768: Avoid parts of the previous game show in the lobby
   * Re-added the old MP lobby
 * Miscellaneous and bug fixes:
   * better fix for bug 14765 now that string freeze is off
   * Fixed the ping timeout not waiting for the default ping interval when
     ping timeout is not set to 0
   * Strip whitespace characters from .ign patterns (bug #15902)
   * Fixed tab completion not working in the new lobby (bug #14730)

Version 1.8.0:
 * AI:
   * Fixed bug #14247: Make formula AI behave correctly if the side has only 1
     potential recruit.
   * Added support for candidate actions written in lua.
 * Campaigns:
   * Descent into Darkness:
     * Added new Giant Rat base frame and animations.
   * Legend of Wesmere:
     * Fixed bug #15631: Scenario 3: arrival of Kalenz failed
     * Fixed bug #15679: Scenario 17: leader of side 2 is missing
     * Fixed bug #15680: Scenario 18: wrong recruitment options
   * Under the Burning Suns:
     * Scenario 2: speed up AI turn.
 * Graphics:
   * Added new Cave Spider and Cuttle Fish graphics
 * Language and i18n:
   * Added new translations: Serbian Ijekavian, Serbian Ijekavian Latin
   * Updated translations: Czech, Finnish, French, German, Hungarian, Japanese,
     Latvian, Lithuanian, Russian, Serbian, Spanish, Slovak
 * Multiplayer:
   * Updated maps: Cynsaun Battlefield
 * Music and sound effects:
   * Fixed bug #15668: The lobby will play a random music playlist, configured
     by [lobby_music], instead of looping the main menu song
   * Fixed bug #15669: The titlescreen will play a random music playlist,
     configured by [titlescreen_music], instead of looping the main menu song