@@ -21,6 +21,8 @@ Version 1.8.0+svn:
 
  * User interface:
    * Re-added the old MP lobby
+   * Add a preference for switching between the old an new lobby, in the
+     preferences dialog in the "Multiplayer" tab. Defaults to the old lobby.
 
 
 Version 1.8.0:
