@@ -45,6 +45,10 @@ namespace preferences {
 	void _set_lobby_joins(int show);
 	enum { SHOW_NONE, SHOW_FRIENDS, SHOW_ALL };
 
+	bool new_lobby();
+	void set_new_lobby(bool value);
+
+
 	const std::set<std::string> & get_friends();
 	const std::set<std::string> & get_ignores();
 	bool add_friend(const std::string& nick);
