@@ -14,6 +14,8 @@ Version 1.8.0+svn:
    * Fixed bug #15716: Lobby crash when refreshing with filtered out games
    * Fixed bug #15768: Avoid parts of the previous game show in the lobby
    * Re-added the old MP lobby
+   * Add a preference for switching between the old an new lobby, in the
+     preferences dialog in the "Multiplayer" tab. Defaults to the old lobby.
  * Miscellaneous and bug fixes:
    * better fix for bug 14765 now that string freeze is off
    * Fixed the ping timeout not waiting for the default ping interval when
